fixed dark mode

--- a/src/styles/components/card.css
+++ b/src/styles/components/card.css
@@ -5,7 +5,7 @@
   top: 50%;
   transform: translate(-50%, -50%);
   background-color: hsla(var(--card) / 0.7);
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(30px);
   border-radius: var(--radius);
   border-width: 2px;
   border-bottom-color: hsla(var(--secondary-foreground));
@@ -20,17 +20,22 @@
     box-shadow 1s ease-in-out,
     border-bottom-color 0.5s ease-in-out,
     backdrop-filter 0.5s ease-in-out;
+  width: max-content;
   min-width: min-content;
   max-width: 100vw;
-  width: max-content;
-  max-height: 100svh;
-  overflow-y: scroll;
   scrollbar-width: none;
+  overflow: hidden;
   -ms-overflow-style: none;
 }
 
 .card:hover {
   box-shadow: hsla(var(--primary)) 0 0 150px;
   border-bottom-color: hsla(var(--primary));
-  backdrop-filter: blur(50px);
+  backdrop-filter: blur(10px);
+}
+
+@media (width <= 768px) {
+  .card {
+    pointer-events: auto;
+  }
 }
